# travertino

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  release.yml
changes/: 10.feature.rst  139.removal.rst  141.feature.rst  143.feature.rst  145.misc.rst  148.feature.rst  15.misc.rst  16.misc.txt  17.feature.rst  18.doc.rst  19.feature.rst  22.misc.rst  222.feature.rst  224.bugfix.rst  224.feature.rst  224.misc.rst  224.removal.1.rst  224.removal.2.rst  23.feature.rst  232.misc.rst  233.bugix.rst  234.misc.rst  239.misc.rst  24.misc.rst  241.feature.rst  243.feature.rst  244.misc.rst  244.removal.rst  249.misc.rst  25.misc.rst  26.misc.rst  3.bugfix.rst  30.misc.rst  34.misc.rst  43.feature.rst  5.feature.rst  78.feature.rst
src/travertino/: __init__.py  colors.py  constants.py  declaration.py  fonts.py  layout.py  node.py  size.py
tests/: test_choices.py  test_choices_deprecated.py  test_choices_new_api.py  test_color.py  test_color_parsing.py  test_composite_property.py  test_declaration.py  test_declaration_new_api.py  test_font.py  test_font_parsing.py  test_layout.py  test_node.py  test_size.py  utils.py
tests/colors/: test_color_constructor.py  test_color_exceptions.py
tests/fonts/: test_parsing.py
tests/style_decorator/: test_choices.py  test_style_decorator.py
travertino/: __init__.py  colors.py  constants.py  declaration.py  fonts.py  layout.py  node.py  size.py  style_decorator.py  style_properties.py
