[metadata]
name = travertino
version = attr: travertino.__version__
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Tracker = https://github.com/beeware/travertino/issues
    Source = https://github.com/beeware/travertino
author = Russell Keith-Magee
author_email = russell@keith-magee.com
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
license = New BSD
license_files =
    LICENSE
description = Travertino is a set of constants and utilities for describing user interfaces
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >= 3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[flake8]
exclude=
    local/*,\
    docs/*,\
    build/*,\
    dist/*,\
    .tox/*, \
    venv*
max-complexity = 25
max-line-length = 119
# The following issues are ignored because they do not match our code style:
# E133: closing bracket missing indentation
# E226: missing whitespace around arithmetic operator
# W503: line break occurred before a binary operator
ignore = E133,E226,W503

# ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
not_skip = __init__.py
