[metadata]
name = travertino
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Tracker = https://github.com/beeware/travertino/issues
    Source = https://github.com/beeware/travertino
author = Russell Keith-Magee
author_email = russell@keith-magee.com
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
license = New BSD
license_files =
    LICENSE
description = Travertino is a set of constants and utilities for describing user interfaces
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >= 3.8
packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    pre-commit == 3.5.0
    pytest == 7.4.2
    setuptools_scm[toml] == 8.0.4
    tox == 4.11.3

[options.packages.find]
where = src

[flake8]
exclude=
    local/*,\
    docs/*,\
    build/*,\
    dist/*,\
    .tox/*, \
    venv*
max-complexity = 25
max-line-length = 119
# The following issues are ignored because they do not match our code style:
# E133: closing bracket missing indentation
# E226: missing whitespace around arithmetic operator
# W503: line break occurred before a binary operator
ignore = E133,E226,W503
